Fixed bug with folder name not shrinking when overflowing

--- a/frontend/src/app/components/file/file-list-item-folder/file-list-item-folder.component.css
+++ b/frontend/src/app/components/file/file-list-item-folder/file-list-item-folder.component.css
@@ -72,3 +72,16 @@
   padding: 2px;
   border-radius: 100px;
 }
+
+.wrapper{
+  flex: 1;
+  overflow-x: hidden;
+}
+
+
+.folderName{
+  flex: 1;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  padding-right: 32px;
+}
